--- a/index.html
+++ b/index.html
@@ -3,9 +3,85 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Proyecto Codo A Codo</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="./CSS/styles.css" rel="stylesheet">
+    <title>Proyecto Codo A Codo 1(Java)</title>
 </head>
 <body>
-    Prueba
+    <!-- Ver clase 10 para navbar-->
+    <header>
+        <!-- Acá intenté usar uno prefabricado de bootstrap pero no supe configurarlo mejor, así que lo abandoné para intentar lo de la clase 10-->
+        <!-- <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div id="navbarMain" class="container-fluid">
+              <img src="./resources/codoacodo.png" class="navbar-brand">Codo A Codo</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                  <a class="nav-link">La conferencia</a>
+                  <a class="nav-link">Los oradores</a>
+                  <a class="nav-link">El lugar y la fecha</a>
+                  <a class="nav-link">Conviértete en orador</a>
+                  <a class="nav-link">Comprar tickets</a>
+                </div>
+              </div>
+            </div>
+          </nav> -->
+        
+        <nav class="logo">
+            <ul class="links">
+                <li><a>La conferencia</a></li>
+                <li><a>Los oradores</a></li>
+                <li><a>El lugar y la fecha</a></li>
+                <li><a>Conviértete en orador</a></li>
+                <li><a>Comprar tickets</a></li>
+            </ul>
+        </nav>
+    </header>
+
+      <div id="carouselBuenosAires" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="./resources/ba1.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="./resources/ba2.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="./resources/ba3.jpg" class="d-block w-100" alt="...">
+          </div>
+        </div>
+      </div>
+
+      <footer>
+        <div id="footer">
+            <ul>
+                <li>
+                    Preguntas frecuentes
+                </li>
+                <li>
+                    Contáctanos
+                </li>
+                <li>
+                    Prensa
+                </li>
+                <li>
+                    Conferencias
+                </li>
+                <li>
+                    Términos y condiciones
+                </li>
+                <li>
+                    Privacidad
+                </li>
+                <li>
+                    Estudiantes
+                </li>
+            </ul>
+        </div>
+      </footer>
+
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
