Navbar y Contenido principal completados (de momento) git status git git status

--- a/index.html
+++ b/index.html
@@ -7,54 +7,48 @@
     <link href="./CSS/styles.css" rel="stylesheet">
     <title>Proyecto Codo A Codo 1(Java)</title>
 </head>
+
 <body>
-    <!-- Ver clase 10 para navbar-->
     <header>
-        <!-- Acá intenté usar uno prefabricado de bootstrap pero no supe configurarlo mejor, así que lo abandoné para intentar lo de la clase 10-->
-        <!-- <nav class="navbar navbar-expand-lg bg-body-tertiary">
-            <div id="navbarMain" class="container-fluid">
-              <img src="./resources/codoacodo.png" class="navbar-brand">Codo A Codo</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-                  <a class="nav-link">La conferencia</a>
-                  <a class="nav-link">Los oradores</a>
-                  <a class="nav-link">El lugar y la fecha</a>
-                  <a class="nav-link">Conviértete en orador</a>
-                  <a class="nav-link">Comprar tickets</a>
-                </div>
+        <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
+          <div class="container-fluid">
+            <span class="navbar-brand mb-0 h1"><img src="./resources/codoacodo.png" alt="Logo" width="130" height="75">Conf Bs As
+            </span>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+              <div class="navbar-nav">
+                <a class="nav-link active" aria-current="page" href="#">La conferencia</a>
+                <a class="nav-link" href="#">Los oradores</a>
+                <a class="nav-link" href="#">El lugar y la fecha</a>
+                <a class="nav-link" href="#">Conviértete en orador</a>
+                <a class="nav-link" href="#">Comprar tickets</a>
               </div>
             </div>
-          </nav> -->
-        
-        <nav class="logo">
-            <ul class="links">
-                <li><a>La conferencia</a></li>
-                <li><a>Los oradores</a></li>
-                <li><a>El lugar y la fecha</a></li>
-                <li><a>Conviértete en orador</a></li>
-                <li><a>Comprar tickets</a></li>
-            </ul>
+          </div>
         </nav>
     </header>
 
-      <div id="carouselBuenosAires" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="./resources/ba1.jpg" class="d-block w-100" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="./resources/ba2.jpg" class="d-block w-100" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="./resources/ba3.jpg" class="d-block w-100" alt="...">
+    <section class="conferenceInfo">
+      <div id="shadowLayer">
+        <div class="container-flex">
+          <div class="conferenceContent">
+            <h1>Conf Bs As</h1>
+            <p>Bs As llega por primera vez a Argentina. Un evento para compartir con nuestra comunidad el conocimiento y experiencia de los expertos que están creando el futuro de Internet. Ven a conocer a miembros del evento, a otros estudiantes de Codo a Codo y los oradores de primer nivel que tenemos para ti. Te esperamos!</p>
+            <div class="buttons">
+              <button type="button" class="btn btn-outline-light">Quiero ser orador</button>
+              <button type="button" class="btn btn-success">Comprar tickets</button>
+            </div>
           </div>
         </div>
       </div>
+    </section>
 
-      <footer>
+    
+
+      <!-- <footer>
         <div id="footer">
             <ul>
                 <li>
@@ -80,7 +74,7 @@
                 </li>
             </ul>
         </div>
-      </footer>
+      </footer> -->
 
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
