Sección de Oradores terminada!

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
               <div class="navbar-nav">
-                <a class="nav-link active" aria-current="page" href="#">La conferencia</a>
-                <a class="nav-link" href="#">Los oradores</a>
+                <a class="nav-link active" aria-current="page" href="#conference">La conferencia</a>
+                <a class="nav-link" href="#speakers">Los oradores</a>
                 <a class="nav-link" href="#">El lugar y la fecha</a>
                 <a class="nav-link" href="#">Conviértete en orador</a>
                 <a class="nav-link" href="#">Comprar tickets</a>
@@ -31,7 +31,7 @@
         </nav>
     </header>
 
-    <section class="conferenceInfo">
+    <section class="conferenceInfo" id="conference">
       <div id="shadowLayer">
         <div class="container-flex">
           <div class="conferenceContent">
@@ -46,8 +46,55 @@
       </div>
     </section>
 
-    
+    <section class="speakersInfo" id="speakers">
+      <div class="title">
+        <h6>CONOCE A LOS</h6>
+        <h2>ORADORES</h2>
+      </div>
 
+      <div class="speakersCards">
+            <div class="card">
+              <img src="./resources/steve.jpg" class="card-img-top" alt="Steve Jobs">
+              <div class="card-body">
+                <div class="specialty">
+                  <h6 class="yellowCategory">JavaScript</h6>
+                  <h6 class="cyanCategory">React</h6>
+                </div>
+                <h5 class="card-title">Steve Jobs</h5>
+                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt doloribus autem veniam odio vel perspiciatis architecto quam esse cumque? Blanditiis asperiores quaerat quae vero facilis reiciendis tempore quam eaque dolore.</p>
+              </div>
+            </div>
+
+            <div class="card">
+              <img src="./resources/bill.jpg" class="card-img-top" alt="Bill Gates">
+              <div class="card-body">
+                <div class="specialty">
+                  <h6 class="yellowCategory">JavaScript</h6>
+                  <h6 class="cyanCategory">React</h6>
+                </div>
+                <h5 class="card-title">Bill Gates</h5>
+                <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Error molestias, pariatur temporibus soluta atque eligendi magni perspiciatis nam voluptatum omnis non reprehenderit accusantium, similique recusandae voluptates alias adipisci nesciunt aspernatur!</p>
+              </div>
+            </div>
+
+            <div class="card">
+              <img src="./resources/ada.jpeg" class="card-img-top" alt="Ada Lovelace">
+              <div class="card-body">
+                <div class="specialty">
+                  <h6 class="greyCategory">Negocios</h6>
+                  <h6 class="redCategory">Startups</h6>
+                </div>
+                <h5 class="card-title">Ada Lovelace</h5>
+                <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat ad totam odit omnis nihil quae ut suscipit quod eius minima ex doloribus temporibus, nostrum accusantium illo molestias similique non voluptate!</p>
+              </div>
+            </div>
+      </div>
+
+    </section>
+
+    <section>
+      
+    </section>
       <!-- <footer>
         <div id="footer">
             <ul>
