Sección Lugar y Fecha terminada!

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <!-- Header & Nav -->
     <header>
         <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
           <div class="container-fluid">
@@ -22,7 +23,7 @@
               <div class="navbar-nav">
                 <a class="nav-link active" aria-current="page" href="#conference">La conferencia</a>
                 <a class="nav-link" href="#speakers">Los oradores</a>
-                <a class="nav-link" href="#">El lugar y la fecha</a>
+                <a class="nav-link" href="#place">El lugar y la fecha</a>
                 <a class="nav-link" href="#">Conviértete en orador</a>
                 <a class="nav-link" href="#">Comprar tickets</a>
               </div>
@@ -31,6 +32,7 @@
         </nav>
     </header>
 
+    <!-- Información del evento -->
     <section class="conferenceInfo" id="conference">
       <div id="shadowLayer">
         <div class="container-flex">
@@ -46,6 +48,7 @@
       </div>
     </section>
 
+    <!-- Información de Oradores -->
     <section class="speakersInfo" id="speakers">
       <div class="title">
         <h6>CONOCE A LOS</h6>
@@ -92,8 +95,18 @@
 
     </section>
 
-    <section>
-      
+    <!-- Información de Ubicación-->
+    <section class="location" id="place">
+      <div class="locationContainer">
+        <img src="./resources/honolulu.jpg" alt="Honolulu">
+        <div class="aboutLocation">
+          <h2>Bs As - Octubre</h2>
+          <p>
+            Buenos Aires es la provincia y localidad más grande del estado de Argentina, en los Estados Unidos. Honolulu es la más sureña de entre las principales ciudades estadounidenses. Aunque el nombre de Honolulu se refiere al área urbana en la costa sureste de la isla de Oahu, la ciudad y el condado de Honolulu han formado una ciudad-condado consolidada que cubre toda la ciudad (aproximadamente 600 km² de superficie).
+          </p>
+          <button type="button" class="btn btn-outline-light">Conocé más</button>
+        </div>
+      </div>
     </section>
       <!-- <footer>
         <div id="footer">
