--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <a class="nav-link active" aria-current="page" href="#conference">La conferencia</a>
                 <a class="nav-link" href="#speakers">Los oradores</a>
                 <a class="nav-link" href="#place">El lugar y la fecha</a>
-                <a class="nav-link" href="#">Conviértete en orador</a>
+                <a class="nav-link" href="#join">Conviértete en orador</a>
                 <a class="nav-link" href="#">Comprar tickets</a>
               </div>
             </div>
@@ -95,7 +95,7 @@
 
     </section>
 
-    <!-- Información de Ubicación-->
+    <!-- Información de Ubicación -->
     <section class="location" id="place">
       <div class="locationContainer">
         <img src="./resources/honolulu.jpg" alt="Honolulu">
@@ -108,33 +108,56 @@
         </div>
       </div>
     </section>
-      <!-- <footer>
-        <div id="footer">
-            <ul>
-                <li>
-                    Preguntas frecuentes
-                </li>
-                <li>
-                    Contáctanos
-                </li>
-                <li>
-                    Prensa
-                </li>
-                <li>
-                    Conferencias
-                </li>
-                <li>
-                    Términos y condiciones
-                </li>
-                <li>
-                    Privacidad
-                </li>
-                <li>
-                    Estudiantes
-                </li>
-            </ul>
-        </div>
-      </footer> -->
+
+    <!-- Información de Formulario -->
+    <section class="form" id="join">
+      <div class="title">
+        <h6>CONVIÉRTETE EN UN</h6>
+        <h2>ORADOR</h2>
+        <h3>Anótate como orador para dar una <span class="underline">charla ignite.</span> Cuéntanos de qué quieres hablar!</h3>
+      </div>
+
+      <div class="formContainer">
+        <form action="">
+          <div class="first-last-name">
+            <input type="text" class="input-name" name="input-firstname" placeholder="Nombre" required>
+            <input type="text" class="input-name" name="input-lastname" placeholder="Apellido" required>
+          </div>
+          <textarea class="input-about" name="input-about" id="" cols="30" rows="6" placeholder="Sobre qué quieres hablar?"></textarea>
+          <h6>Recuerda incluir un título para tu charla</h6>
+          <input class="btn-submit" type="submit" value="Enviar">
+        </form>
+      </div>
+    </section>
+    
+    <!-- Footer -->
+    <footer>
+      <div id="footer">
+        <ul>
+          <li>
+            Preguntas frecuentes
+          </li>
+          <li>
+            Contáctanos
+          </li>
+          <li>
+            Prensa
+          </li>
+          <li>
+            Conferencias
+          </li>
+          <li>
+            Términos y condiciones
+          </li>
+          <li>
+            Privacidad
+          </li>
+          <li>
+            Estudiantes
+          </li>
+        </ul>
+      </div>
+    </footer>
 
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
