--- a/index.html
+++ b/index.html
@@ -131,31 +131,15 @@
     </section>
     
     <!-- Footer -->
-    <footer>
-      <div id="footer">
-        <ul>
-          <li>
-            Preguntas frecuentes
-          </li>
-          <li>
-            Contáctanos
-          </li>
-          <li>
-            Prensa
-          </li>
-          <li>
-            Conferencias
-          </li>
-          <li>
-            Términos y condiciones
-          </li>
-          <li>
-            Privacidad
-          </li>
-          <li>
-            Estudiantes
-          </li>
-        </ul>
+    <footer class="footer">
+      <div class="footerContainer">
+        <a class="footer-item" href="#">Preguntas frecuentes</a>
+        <a class="footer-item" href="#">Contáctanos</a>
+        <a class="footer-item" href="#">Prensa</a>
+        <a class="footer-item" href="#">Conferencias</a>
+        <a class="footer-item" href="#">Términos y Condiciones</a>
+        <a class="footer-item" href="#">Privacidad</a>
+        <a class="footer-item" href="#">Estudiantes</a>
       </div>
     </footer>
 
